Shortest-path , palindromic substring

--- a/SIGMA/DP/.md
+++ b/SIGMA/DP/.md
@@ -11,6 +11,7 @@
 - longest commmon subseq
 - ShortestCommonSuperSeq (gfg)
 - Edit Distance
+- palindromic substring
 
 
 - DOMINO and TROMINO TILING PROBLEM
