Add Longest Palindromic Substring solution and update documentation

--- a/SIGMA/DP/.md
+++ b/SIGMA/DP/.md
@@ -12,6 +12,7 @@
 - ShortestCommonSuperSeq (gfg)
 - Edit Distance
 - palindromic substring
+- longest palindromic substring
 
 
 - DOMINO and TROMINO TILING PROBLEM
