Dijstras question , palindrome string questions

--- a/SIGMA/DP/.md
+++ b/SIGMA/DP/.md
@@ -13,6 +13,8 @@
 - Edit Distance
 - palindromic substring
 - longest palindromic substring
+- Longest Palindromic Subsequence
+- Minimum Insertion Steps to Make a String Palindrome | Blue Print
 
 
 - DOMINO and TROMINO TILING PROBLEM
