Add PalindromePartitioningI class with partition method implementation

--- a/SIGMA/DP/.md
+++ b/SIGMA/DP/.md
@@ -15,6 +15,6 @@
 - longest palindromic substring
 - Longest Palindromic Subsequence
 - Minimum Insertion Steps to Make a String Palindrome | Blue Print
-
+- Palindrome Partitioning 
 
 - DOMINO and TROMINO TILING PROBLEM
