Dp : palindrome partitionning ,

--- a/SIGMA/DP/.md
+++ b/SIGMA/DP/.md
@@ -16,5 +16,6 @@
 - Longest Palindromic Subsequence
 - Minimum Insertion Steps to Make a String Palindrome | Blue Print
 - Palindrome Partitioning 
+- Palindrome Partitioning II
 
 - DOMINO and TROMINO TILING PROBLEM
