Graph : floyds warshalls algorithm

--- a/SIGMA/DP/.md
+++ b/SIGMA/DP/.md
@@ -2,6 +2,9 @@
 - climbing stairs
 - house robber I -> II
 - MAXIMUM ALTERNATING SUBSEQ SUM
+
+# Longest Increasing subsequece
+
 - LONGEST INCREASING SUBSEQ
 - MAXIMUM LENGTH OF PAIR CHAIN (same as lis)
 - LOngest string chain (same as lis)
@@ -11,11 +14,42 @@
 - longest commmon subseq
 - ShortestCommonSuperSeq (gfg)
 - Edit Distance
+
+# string related problems palindrome
+
 - palindromic substring
 - longest palindromic substring
 - Longest Palindromic Subsequence
 - Minimum Insertion Steps to Make a String Palindrome | Blue Print
-- Palindrome Partitioning 
+- Palindrome Partitioning
 - Palindrome Partitioning II
+
+# Dp on grids
+
+- Unique paths find the path from source to destination and or with obstackles
+
+## Minimum path sum / sot path
+
+- finding paths with minimum sun of weights or costs it an be maximum
+
+## shortest path in a grid
+
+- Grid with uniform weights -> bfs
+- Grid with non-uniform weights -> dp or dijkstras
+
+## Game board
+
+### chess board relted problems
+
+- minimum knights moves
+- Shortest path for king to reach a destnation
+- Queen related problems
+- snake and grid related problems
+
+## Matrix grid traversal/ walk
+
+- cherry pickup -I , II
+- dungeaon game
+- robot walk relatd problems
 
 - DOMINO and TROMINO TILING PROBLEM
