Two pointer : leetcode 1498

--- a/SIGMA/DP/.md
+++ b/SIGMA/DP/.md
@@ -52,4 +52,12 @@
 - dungeaon game
 - robot walk relatd problems
 
+# Some knapscak problmes
+- 0-1
+- unbounded
+- Parition Equal subset sum
+- Rod cutting
+- Tarfet sum
+- coin change 
+
 - DOMINO and TROMINO TILING PROBLEM
