Add DFS implementation and missing number algorithms; create UniquePaths and ReverseAlinkedList classes

--- a/SIGMA/DP/.md
+++ b/SIGMA/DP/.md
@@ -15,6 +15,11 @@
 - ShortestCommonSuperSeq (gfg)
 - Edit Distance
 
+# Longest common subsequence
+- Longest common subsequence
+- longest palidromic subsequence
+- shortest common super sequence
+
 # string related problems palindrome
 
 - palindromic substring
