Add dynamic programming solutions for Unique Paths, Maximum Non Negative Product in a Matrix, and Dungeon Game; implement Minimize Maximum Pair Sum and Number of Islands algorithms

--- a/SIGMA/DP/.md
+++ b/SIGMA/DP/.md
@@ -32,6 +32,9 @@
 # Dp on grids
 
 - Unique paths find the path from source to destination and or with obstackles
+- unique path I  ,  II
+- Maximum Non Negative Product in a Matrix
+- Dungeon Game
 
 ## Minimum path sum / sot path
 
