Fix typos in dynamic programming problems and add new implementations for decoding and perfect square algorithms

--- a/SIGMA/DP/.md
+++ b/SIGMA/DP/.md
@@ -63,7 +63,7 @@
 - unbounded
 - Parition Equal subset sum
 - Rod cutting
-- Tarfet sum
+- Target sum
 - coin change 
 
 - DOMINO and TROMINO TILING PROBLEM
