Add DeleteAndEarn solution and MinimumScoreOFAPathBetweeenTwoCities class; update documentation for clarity

--- a/SIGMA/DP/.md
+++ b/SIGMA/DP/.md
@@ -3,7 +3,7 @@
 - house robber I -> II
 - MAXIMUM ALTERNATING SUBSEQ SUM
 
-# Longest Increasing subsequece
+# Longest Increasing subsequece - SATURDAY
 
 - LONGEST INCREASING SUBSEQ
 - MAXIMUM LENGTH OF PAIR CHAIN (same as lis)
@@ -13,12 +13,12 @@
 - Largest divisible subset
 - Edit Distance
 
-# Longest common subsequence
+# Longest common subsequence - SATURDAY
 - Longest common subsequence
 - longest palidromic subsequence
 - shortest common super sequence
 
-# string related problems palindrome
+# string related problems palindrome - FRIDAY
 
 - palindromic substring
 - longest palindromic substring
@@ -27,7 +27,7 @@
 - Palindrome Partitioning
 - Palindrome Partitioning II
 
-# Dp on grids
+# Dp on grids -  Friday
 
 - Unique paths find the path from source to destination and or with obstackles
 - unique path I  ,  II
@@ -38,12 +38,12 @@
 
 - finding paths with minimum sun of weights or costs it an be maximum
 
-## shortest path in a grid
+## shortest path in a grid - THURSDAY
 
 - Grid with uniform weights -> bfs
 - Grid with non-uniform weights -> dp or dijkstras
 
-## Game board
+## Game board - WEDNESDAY
 
 ### chess board relted problems
 
@@ -52,13 +52,13 @@
 - Queen related problems
 - snake and grid related problems
 
-## Matrix grid traversal/ walk
+## Matrix grid traversal/ walk - TUESDAY
 
 - cherry pickup -I , II
 - dungeaon game
 - robot walk relatd problems
 
-# Some knapscak problmes
+# Some knapscak problmes - MONDAY
 - 0-1
 - unbounded
 - Parition Equal subset sum
@@ -67,3 +67,5 @@
 - coin change 
 
 - DOMINO and TROMINO TILING PROBLEM
+
+REVISE EVERYTHING ON SUNDAY
